[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Frederico Marques <frederico.almeida.marques@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
degiro-api = "^0.1"

[tool.poetry.group.dev.dependencies]
tox = "^3.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
