[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Frederico Marques <frederico.almeida.marques@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
degiro-api = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
poetry-core = "^1.0.0"
tox = "^3.27.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
