[metadata]
name = portfolio
version = 0.1.0
on = attr: example.__version__
author = You
author_email = your@email.address
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = =src
zip_safe = True
include_package_data = True
;install_requires = file: requirements.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
portfolio = portfolio.portfolio:main

;[options.extras_require]
;notebook = jupyter>=1.0.0, matplotlib
;dev = 
;    black==22.1.0
;    flake8==4.0.1

[options.package_data]
example = data/schema.json, *.txt
* = README.md
